--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,8 +1,19 @@
-body {
-    background-color: skyblue;
-}
+
 
 .home_background{
     width: 100%;
     height:50%
+}
+
+#main-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+#main-container div {
+    padding: 10px;
+}
+
+.active{
+    color: blue;
 }
