--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,9 +15,12 @@
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand h1" href="">NV Gallery</a>
+        <a class="navbar-brand h1" href="{{ path('app_home') }}">NV Gallery</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('import_product') }}">Import Produit</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Produits</a>
                 </li>
