--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
                     <a class="nav-link" href="#">Produits</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('import_inventories') }}">Import Inventories</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Inventaires</a>
                 </li>
             </ul>
