Display products with paginator component and serach functionality

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,6 +14,58 @@
     padding: 10px;
 }
 
-.active{
-    color: blue;
+able {
+    width: 90%;
+    border-collapse: collapse;
+}
+
+/* Style des cellules de la table */
+td, th {
+    padding: 8px;
+    border: 1px solid #dddddd;
+    text-align: left;
+}
+
+/* Style de l'en-tête de la table */
+th {
+    background-color: #B0E0E6;
+    font-weight: bold;
+}
+
+/* Style alterné des lignes */
+tr:nth-child(even) {
+    background-color: #DCDCDC;
+}
+.class-body{
+    margin-left: 20px;
+}
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.pagination a {
+    margin: 0 5px;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #333;
+    background-color: #eee;
+    border-radius: 5px;
+}
+
+.pagination .active a {
+    background-color: #007bff;
+    color: #fff;
+}
+
+.pagination .disabled a {
+    color: #777;
+    pointer-events: none;
+}
+
+section{
+    display: flex;
+    gap: 10px;
 }
