--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="{{ path('import_product') }}">Import Produit</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Produits</a>
+                    <a class="nav-link" href="{{ path('products') }}">Produits</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('import_inventories') }}">Import Inventories</a>
